--- a/index.html
+++ b/index.html
@@ -3,14 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>BA | Base Apparel</title>
   </head>
   <body>
-    We're coming soon Hello fellow shoppers! We're currently building our new
-    fashion store. Add your email below to stay up-to-date with announcements
-    and our launch deals. Email Address
-
-    <footer></footer>
+    <div class="container">
+      <div class="text-container">
+        <img class="logo-img" src="./images/logo.svg" alt="Base Apparel Logo" />
+        <h1 class="hero-title"><span>We're</span></br>coming</br> soon</h1>
+        <p class="hero-text">
+          Hello fellow shoppers! We're currently building our new fashion store.
+          Add your email below to stay up-to-date with announcements and our
+          launch deals.
+        </p>
+        <form>
+          <input type="email" placeholder="Email Adress"/>
+          <button type="submit">></button>
+        </form>
+      </div>
+      <div class="image-container">
+        <img class="hero-img" src="./images/hero-desktop.jpg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
